<!--Copyright (C) 2018 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
  	http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->

<resources>
    <string name="app_name">Popular Movies 2</string>
    <string name="detail_error_message">Error opening details</string>

    // Toolbar title
    <string name="toolbar_title_discover_movies">Discover Movies</string>
    <string name="toolbar_title_discover_tv_shows">Discover TV Shows</string>
    <string name="toolbar_title_movies_now_playing">Now Playing Movies</string>
    <string name="toolbar_title_movies_popular">Popular Movies</string>
    <string name="toolbar_title_movies_top_rated">Top Rated Movies</string>
    <string name="toolbar_title_movies_upcoming">Upcoming Movies</string>
    <string name="toolbar_title_movies_favourites">Favourites Movies</string>
    <string name="toolbar_title_tv_shows_popular">Popular Shows</string>
    <string name="toolbar_title_tv_shows_top_rated">Top Rated Shows</string>
    <string name="toolbar_title_tv_shows_on_tv">On TV Shows</string>
    <string name="toolbar_title_tv_shows_airing_today">Airing Today Shows</string>
    <string name="toolbar_title_people_popular">Popular People</string>

    // Main activity views
    <string name="iv_poster_description">Movie poster</string>
    <string name="iv_person_poster_description">Person poster</string>
    <string name="iv_favourite_icon_description">Favourite icon</string>
    <string name="tv_title">Title</string>

    // Navigation Drawer
    <string name="description_navigation_drawer_image">Header image for navigation drawer</string>
    <string name="link_navigation_drawer_image">https://pixabay.com/en/movie-projector-projector-55122/</string>
    <string name="author_navigation_drawer_image">DasWortgewand</string>

    <string name="navigation_drawer_title_discover">Discover</string>
    <string name="navigation_drawer_title_discover_movies">Movies</string>
    <string name="navigation_drawer_title_discover_tv_shows">TV Shows</string>

    <string name="navigation_drawer_title_movies">Movies</string>
    <string name="navigation_drawer_title_movies_now_playing">Now Playing</string>
    <string name="navigation_drawer_title_movies_popular">Popular</string>
    <string name="navigation_drawer_title_movies_top_rated">Top Rated</string>
    <string name="navigation_drawer_title_movies_upcoming">Upcoming</string>
    <string name="navigation_drawer_title_movies_favourites">Favourites</string>

    <string name="navigation_drawer_title_tv_shows">TV Shows</string>
    <string name="navigation_drawer_title_tv_shows_popular">Popular</string>
    <string name="navigation_drawer_title_tv_shows_top_rated">Top Rated</string>
    <string name="navigation_drawer_title_tv_shows_on_tv">On TV</string>
    <string name="navigation_drawer_title_tv_shows_airing_today">Airing Today</string>

    <string name="navigation_drawer_title_people">People</string>
    <string name="navigation_drawer_title_people_popular">Popular</string>

    // Toolbar
    <string name="description_toolbar_image">Header image for toolbar</string>
    <string name="link_toolbar_image">https://pixabay.com/en/film-cinema-movie-entertainment-2891853/</string>
    <string name="author_toolbar_image">QuinceMedia</string>

    // Movie Details activity
    <string name="activity_title_movie_details">Movie Details</string>
    <string name="iv_movie_recommendation_poster_description">Recommendation poster</string>
    <string name="button_all_reviews">Read All Reviews</string>
    <string name="text_movie_details_reviews_by">Review by</string>
    <string name="text_movie_details_user_score">User score:</string>
    <string name="text_movie_details_overview">Overview</string>
    <string name="text_movie_details_featured_crew">Featured Crew</string>
    <string name="text_movie_details_cast">Top Billed Cast</string>
    <string name="text_movie_details_social">Social</string>
    <string name="text_movie_details_media">Media</string>
    <string name="text_movie_details_recommendations">Recommendations</string>
    <string name="text_movie_details_facts">Facts</string>
    <string name="text_movie_details_status">Status</string>
    <string name="text_movie_details_release_information">Release Information</string>
    <string name="text_movie_details_original_language">Original Language</string>
    <string name="text_movie_details_runtime">Runtime</string>
    <string name="text_movie_details_budget">Budget</string>
    <string name="text_movie_details_revenue">Revenue</string>
    <string name="text_movie_details_genres">Genres</string>
    <string name="text_movie_details_keywords">Keywords</string>

    <!-- People details activity -->
    <string name="text_people_details_biography">Biography</string>
    <string name="text_people_details_known_for">Known For</string>
    <string name="text_people_details_acting">Acting</string>
    <string name="text_people_details_personal_info">Personal Info</string>
    <string name="text_people_details_gender">Gender</string>
    <string name="text_people_details_known_credits">Known Credits</string>
    <string name="text_people_details_birthday">Birthday</string>
    <string name="text_people_details_place_of_birth">Place of Birth</string>
    <string name="text_people_details_official_site">Official Site</string>
    <string name="text_people_details_also_known_as">Also Known As</string>
    <string name="text_people_details_female">Female</string>
    <string name="text_people_details_male">Male</string>
    <string name="text_people_details_unspecified">Unspecified</string>
    <string name="text_people_details_empty">-</string>

    // TV Show Details Activity
    <string name="iv_tv_show_backdrop">TV Show backdrop</string>
    <string name="iv_tv_show_recommendation_poster_description">Recommendation poster</string>
    <string name="text_tv_show_details_reviews_by">Review by</string>
    <string name="iv_tv_show_poster">TV Show poster</string>
    <string name="text_tv_show_overview">Overview</string>
    <string name="text_tv_show_details_crew">Featured Crew</string>
    <string name="text_tv_show_details_cast">Top Billed Cast</string>
    <string name="text_tv_show_details_facts">Facts</string>
    <string name="text_tv_show_details_status">Status</string>
    <string name="text_tv_show_details_network">Network</string>
    <string name="text_tv_show_details_certification">Certification</string>
    <string name="text_tv_show_details_type">Type</string>
    <string name="text_tv_show_details_original_language">Original Language</string>
    <string name="text_tv_show_details_runtime">Runtime</string>
    <string name="text_tv_show_details_genres">Genres</string>
    <string name="text_tv_show_details_keywords">Keywords</string>
    <string name="text_tv_show_details_unspecified">Unspecified</string>
    <string name="text_tv_show_details_empty">-</string>
    <string name="text_tv_show_details_creator">Creator</string>

    // Extras set to intent as names
    <string name="extra_poster">poster</string>
    <string name="extra_title">title</string>
    <string name="extra_release_date">release date</string>
    <string name="extra_vote_average">vote average</string>
    <string name="extra_plot_synopsis">plot synopsis</string>

    // Menu search categories
    <string name="menu_action_sort">Sort</string>
    <string name="menu_sort_popular">Popular</string>
    <string name="menu_sort_top_rated">Top Rated</string>
    <string name="menu_sort_favourite">Favourite</string>

    // Activity Reviews
    <string name="text_expand">Expand</string>
    <string name="text_collapse">Collapse</string>

    <!-- Error messages -->
    <string name="error_identifying_adapter">Error in identifying adapter</string>

    <!-- Content Descriptions -->
    <string name="text_content_description_trailer">Trailer</string>

</resources>