<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (C) 2018 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="vkurman.popularmovies2.ui.PersonDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:elevation="4dp" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:minHeight="?android:actionBarSize"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:layout_gravity="top"
                android:layout_marginLeft="@dimen/toolbar_side_margin"
                android:layout_marginRight="@dimen/toolbar_side_margin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="@color/colorPrimary"
                app:contentInsetStart="8dp"
                app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_sides"
                android:layout_marginStart="@dimen/default_margin_sides"
                android:layout_marginTop="@dimen/default_margin_top_bottom"
                android:contentDescription="@string/iv_poster_description"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".5"/>

            <TextView
                android:id="@+id/tv_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_text_padding"
                android:textSize="@dimen/details_title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_iv" />

            <TextView
                android:id="@+id/tv_details_biography_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/details_default_padding"
                android:textSize="@dimen/details_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_name"
                android:text="@string/text_people_details_biography"/>

            <TextView
                android:id="@+id/tv_details_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_no_padding"
                android:paddingBottom="@dimen/details_default_padding"
                android:paddingStart="@dimen/details_text_padding_start"
                android:paddingEnd="@dimen/details_default_padding"
                android:textSize="@dimen/details_normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_biography_title" />

            <TextView
                android:id="@+id/tv_details_known_for_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/details_default_padding"
                android:textSize="@dimen/details_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_biography"
                android:text="@string/text_people_details_known_for"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_known_for"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingTop="@dimen/default_no_padding"
                android:paddingBottom="@dimen/details_default_padding"
                android:paddingStart="@dimen/details_text_padding_start"
                android:paddingEnd="@dimen/details_default_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_known_for_title"/>

            <TextView
                android:id="@+id/tv_details_acting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/details_default_padding"
                android:textSize="@dimen/details_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_known_for"
                android:text="@string/text_people_details_acting"/>

            <TableLayout
                android:id="@+id/table_details_acting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_no_padding"
                android:paddingBottom="@dimen/details_default_padding"
                android:paddingStart="@dimen/details_text_padding_start"
                android:paddingEnd="@dimen/details_default_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_acting_title"/>

            <!-- Personal Info -->
            <TextView
                android:id="@+id/tv_details_personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/details_default_padding"
                android:textSize="@dimen/details_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_details_acting"
                android:text="@string/text_people_details_personal_info"/>

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_known_for_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_personal_info_title"
                android:text="@string/text_people_details_known_for"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_known_for_text"
                app:layout_constraintStart_toStartOf="@id/tv_details_known_for_text_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_known_for_text_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_gender_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_known_for_text"
                android:text="@string/text_people_details_gender"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_gender"
                app:layout_constraintStart_toStartOf="@id/tv_details_gender_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_gender_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_known_credits_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_gender"
                android:text="@string/text_people_details_known_credits"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_known_credits"
                app:layout_constraintStart_toStartOf="@id/tv_details_known_credits_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_known_credits_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_birthday_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_known_credits"
                android:text="@string/text_people_details_birthday"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_birthday"
                app:layout_constraintStart_toStartOf="@id/tv_details_birthday_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_birthday_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_place_of_birth_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_birthday"
                android:text="@string/text_people_details_place_of_birth"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_place_of_birth"
                app:layout_constraintStart_toStartOf="@id/tv_details_place_of_birth_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_place_of_birth_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_official_site_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_place_of_birth"
                android:text="@string/text_people_details_official_site"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_official_site"
                app:layout_constraintStart_toStartOf="@id/tv_details_official_site_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_official_site_title" />

            <TextView
                style="@style/InlineTitle"
                android:id="@+id/tv_details_also_known_as_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_official_site"
                android:text="@string/text_people_details_also_known_as"/>

            <TextView
                style="@style/InlineText"
                android:id="@+id/tv_details_also_known_as"
                app:layout_constraintStart_toStartOf="@id/tv_details_also_known_as_title"
                app:layout_constraintTop_toBottomOf="@id/tv_details_also_known_as_title" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>